--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+header {
+    background-color: #FFF9F4;
+    padding-bottom: 120px;
+}
+
 .nike-bg-primary{
     background-color: #FFF9F4;
+}
+
+.banner-text{
+    padding: 60px 70px;
 }
